[package]
name = "rusho"
version = "1.0.0"
edition = "2021"
authors = ["sysevil 0xsysevil@protonmail.com"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
